--- a/package.json
+++ b/package.json
@@ -3,15 +3,22 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "dev-start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "bootstrap-icons": "^1.5.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^10.0.0",
+    "ejs": "^3.1.6",
     "express": "~4.16.1",
+    "express-session": "^1.17.2",
     "http-errors": "~1.6.3",
+    "mongoose": "^6.0.11",
     "morgan": "~1.9.1",
-    "bootstrap-icons": "^1.5.0",
-    "ejs": "^3.1.6"
+    "passport": "^0.5.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local-mongoose": "^6.1.0"
   }
 }
